--- a/Assignment6/Correlation_clustering_assignment.ipynb
+++ b/Assignment6/Correlation_clustering_assignment.ipynb
@@ -166,8 +166,8 @@
    "metadata": {
     "id": "cA6kIO8Fiotu",
     "ExecuteTime": {
-     "end_time": "2024-05-29T06:58:52.302616Z",
-     "start_time": "2024-05-29T06:58:41.820614Z"
+     "end_time": "2024-05-29T11:14:13.532935Z",
+     "start_time": "2024-05-29T11:14:02.649458Z"
     }
    },
    "source": [
@@ -189,7 +189,7 @@
     "correlation_clustering.solve(solver='cvxopt', verbosity=1)\n",
     "V = cholesky(X.value + 1e-3 * np.identity(n))"
    ],
-   "execution_count": 136,
+   "execution_count": 144,
    "outputs": [
     {
      "name": "stdout",
@@ -240,7 +240,7 @@
       "Solver claims optimal solution for feasible problem.\n",
       "Applying the solution.\n",
       "Applied solution is primal feasible.\n",
-      "Search 1.0e+01s, solve 1.0e+01s, overhead 0%.\n",
+      "Search 1.1e+01s, solve 1.1e+01s, overhead 0%.\n",
       "=============[ PICOS ]=============\n"
      ]
     }
@@ -278,44 +278,64 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cluster weight found by randomized rounding: 1620.8652185440076 (best) and 1528.7379419006704 (worst)\n"
+      "Cluster weight found by randomized rounding: 1623.067219764774 (best) and 1515.6005888133845 (worst)\n",
+      "Clusters of best 4-clustering found by randomized rounding:\n",
+      "\tCluster 1: ['brisbane' 'newcastle' 'melbourne' 'nz' 'australia' 'wales' 'london'\n",
+      " 'sydney' 'cardiff' 'england']\n",
+      "\tCluster 2: ['switzerland' 'belgium' 'finland' 'slovakia' 'holland' 'zealand' 'russia'\n",
+      " 'bulgaria' 'czech' 'serbia' 'denmark' 'austria' 'lithuania' 'germany'\n",
+      " 'slovenia' 'italy' 'norway' 'ireland' 'croatia' 'brazil' 'spain' 'greece'\n",
+      " 'sweden' 'netherlands' 'latvia' 'romania' 'poland' 'europe' 'hungary'\n",
+      " 'iceland' 'belarus' 'azerbaijan' 'kazakhstan' 'estonia' 'morocco']\n",
+      "\tCluster 3: ['netherland' 'englan']\n",
+      "\tCluster 4: ['belanda' 'jerman' 'thailand' 'portugal']\n"
      ]
     }
    ],
    "source": [
-    "cluster_weight = []\n",
-    "repetitions = 1000\n",
+    "partition_weights = []\n",
+    "partitions = []\n",
+    "repetitions = 10**5\n",
     "\n",
     "# Perform randomized rounding many times, compute the cluster weight each time\n",
     "for _ in range(repetitions):\n",
     "  # Generate two random hyperplanes and compute dot product with V\n",
-    "  r = np.random.normal(size = (2, n))\n",
-    "  r_dot_v = np.dot(r, V)\n",
+    "  R = np.random.normal(size = (2, n))\n",
+    "  R_dot_V = np.dot(R, V)\n",
     "  \n",
     "  # Compute the vertices of each cluster\n",
-    "  c1 = (r_dot_v[0] >= 0) * (r_dot_v[1] >= 0)\n",
-    "  c2 = (r_dot_v[0] >= 0) * (r_dot_v[1] < 0)\n",
-    "  c3 = (r_dot_v[0] < 0) * (r_dot_v[1] >= 0)\n",
-    "  c4 = (r_dot_v[0] < 0) * (r_dot_v[1] < 0)\n",
+    "  P = [(R_dot_V[0] >= 0) * (R_dot_V[1] >= 0), \n",
+    "       (R_dot_V[0] >= 0) * (R_dot_V[1] < 0), \n",
+    "       (R_dot_V[0] < 0) * (R_dot_V[1] >= 0),\n",
+    "       (R_dot_V[0] < 0) * (R_dot_V[1] < 0)]\n",
+    "  \n",
+    "  # Compute the words for each cluster\n",
+    "  partitions.append([np.array(words)[c] for c in P])\n",
     "  \n",
     "  # Compute the edges within clusters (plus_edges) and between clusters (minus_edges)\n",
-    "  plus_edges = np.outer(c1, c1) + np.outer(c2, c2) + np.outer(c3, c3) + np.outer(c4, c4)\n",
-    "  minus_edges = 1 - plus_edges\n",
+    "  plus_edges = np.sum([np.outer(c, c) for c in P], axis=0)\n",
+    "  minus_edges = 1 - plus_edges  \n",
     "  \n",
     "  # Compute the cluster weight\n",
-    "  cluster_weight.append(np.sum(W_plus * plus_edges + W_minus * minus_edges))\n",
+    "  partition_weights.append(np.sum(W_plus * plus_edges + W_minus * minus_edges))\n",
     "  \n",
     "\n",
-    "print(f\"Cluster weight found by randomized rounding: {max(cluster_weight)} (best) and {min(cluster_weight)} (worst)\\n\")\n"
+    "print(f\"Cluster weight found by randomized rounding: {max(partition_weights)} (best) and {min(partition_weights)} (worst)\")\n",
+    "partition = partitions[np.argmax(partition_weights)]\n",
+    "print(f\"Clusters of best 4-clustering found by randomized rounding:\")\n",
+    "for i in range(4):\n",
+    "  print(f\"\\tCluster {i+1}: {partition[i]}\")\n",
+    "  \n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-29T06:59:04.342429Z",
-     "start_time": "2024-05-29T06:59:04.306198Z"
+     "end_time": "2024-05-29T13:26:56.396343Z",
+     "start_time": "2024-05-29T13:26:49.369539Z"
     }
    },
-   "execution_count": 140
+   "execution_count": 253
   }
  ]
 }
